--- a/court.css
+++ b/court.css
@@ -6,12 +6,12 @@ h2 {
 }
 
 h3 {
-    font-family: Arial, sans-serif;
+   /*font-family: Arial, sans-serif;*/
     font-size: 1.6em;
 }
 
 h4 {
-    font-family: Arial, sans-serif;
+    /*font-family: Arial, sans-serif;*/
     font-size: 1.3em;
     padding: 0px;
     margin: 0px;
@@ -24,6 +24,20 @@ h4 {
 
 #case-info p {
     margin-bottom: 15px;
+}
+
+ul#sections li {
+    float: left;
+    color: #999;
+    /*border-top: 2px solid #999;*/
+    margin: 0px 20px 0px 0px;
+    padding: 8px 3px 3px 3px;
+}
+
+ul#sections li.current {
+    color: #000;
+    border-top: 2px solid #057EC2;  
+    background: #ebf2f6; 
 }
 
 /* Structure */
@@ -48,11 +62,11 @@ h4 {
 #case-info {
     padding: 10px;
     background: #ebf2f6;
-    border: 2px solid #999;
     min-height: 295px;
+/*  border-left: 2px solid #057EC2;
     border-radius: 5px 5px;
     -moz-border-radius: 5px 5px;
-    -webkit-border-radius: 5px 5px;
+    -webkit-border-radius: 5px 5px;*/
 }
 
 #judges {
@@ -87,7 +101,9 @@ h4 {
 div#cases ul#case-list li.selected {
     color: #000;
     font-weight: bold;
-    border-top: solid 1px #999;
+    border-left: 2px solid #057EC2;
+    background: #ebf2f6;
+/*    border-top: solid 1px #999;
     border-right: solid 1px #999;
     border-bottom: solid 1px #999;
     border-top-right-radius: 5px 5px;
@@ -96,14 +112,16 @@ div#cases ul#case-list li.selected {
     -moz-border-radius-bottomright: 5px 5px;
     -webkit-border-top-right-radius: 5px 5px;
     -webkit-border-bottom-right-radius: 5px 5px;
-    /* background: url('images/arrow.png') no-repeat; */
+    background: url('images/arrow.png') no-repeat; */
 }
 
 div#cases ul#case-list li {
     cursor: pointer;
     font-size: 1.2em;
-    padding: 3px 0px 2px 20px;
+    padding: 3px 20px 2px 3px;
     min-height: 15px;
-    margin: 5px 0px 5px 0px;
+    margin: 0px 0px 10px 0px;
     color: #666;
 }
+
+/*media queries*/
